# Moving-Window

./: .gitignore  CMakeLists.txt  FilteredData-windowSize=3.csv  README.md  ValgrindTest.txt  testFile.csv
Inc/: algorithms.h  file.h  queue.h
Src/: algorithms.c  file.c  main.c  queue.c
